c8-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${UNAMESPACE}-grafana
  namespace: ${UNAMESPACE}
  labels:
    app: grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    meta.helm.sh/release-namespace: ${UNAMESPACE}
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    kubernetes.io/ingress.allow-http: "false"  # on ingress, we only allow secure line. 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #networking.gke.io/managed-certificates: c8-zeebe-gw-cert # Demo env does not require cert
spec:
  tls:
    - hosts:
        - ${UNAMESPACE}.makelabs.in
      secretName: cf-origin-cert
  ingressClassName: "nginx"
  rules:
    - host: ${UNAMESPACE}.makelabs.in
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
